[package]
name = "gou-git"
version = "0.2.5"
edition = "2021"
description = "Gou is a CLI git wrapper that enables trunk-based development"
license = "MIT"
authors = ["viktormarinho"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.4.0"
pretty-log = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"


[[bin]]
name = "gou"
path = "src/bin/gou.rs"
